--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ionic-example",
   "version": "0.0.1",
   "private": true,
+  "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -13,8 +14,10 @@
     "@capacitor/core": "2.4.2",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0-0",
+    "vue-axios": "^3.0.1",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
@@ -35,7 +38,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-axios": "0.0.4",
     "vue-jest": "^5.0.0-0"
-  },
-  "description": "An Ionic project"
+  }
 }
